[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instaharvest_v2"
version = "1.0.19"
description = "Powerful Instagram Private API — anti-detection, async, Pydantic models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "InstaHarvest v2 Team"},
]
keywords = [
    "instagram", "api", "private-api", "scraper",
    "async", "pydantic", "curl-cffi", "anti-detect",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed",
]

dependencies = [
    "curl_cffi>=0.7.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pynacl>=1.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
agent = [
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
]
web = [
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
all = [
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
instaharvest = "instaharvest_v2.agent.cli:main"

[project.urls]
Homepage = "https://github.com/mpython77/instaharvest_v2"
Documentation = "https://mpython77.github.io/instaharvest_v2/"
Issues = "https://github.com/mpython77/instaharvest_v2/issues"

[tool.setuptools.packages.find]
include = ["instaharvest_v2*"]
exclude = ["tests*", "_test_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=instaharvest_v2 --cov-report=term-missing"

[tool.coverage.run]
source = ["instaharvest_v2"]
omit = [
    "instaharvest_v2/agent/*",
    "instaharvest_v2/web/*",
    "*/test_*",
]

[tool.coverage.report]
show_missing = true
precision = 1
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools.package-data]
instaharvest_v2 = ["py.typed", "agent/static/*"]
